@startuml

title __PROJECTEINICIAL's Class Diagram__\n

  package projecteInicial {
    class Amplifier {
        ~ description : String
        + Amplifier()
        + on()
        + off()
        + setStereoSound()
        + setSurroundSound()
        + setVolume()
        + setTuner()
        + setDvd()
        + setCd()
        + toString()
    }
  }
  

  package projecteInicial {
    class CdPlayer {
        ~ description : String
        ~ currentTrack : int
        ~ title : String
        + CdPlayer()
        + on()
        + off()
        + eject()
        + play()
        + play()
        + stop()
        + pause()
        + toString()
    }
  }
  

  package projecteInicial {
    class DvdPlayer {
        ~ description : String
        ~ currentTrack : int
        ~ movie : String
        + DvdPlayer()
        + on()
        + off()
        + eject()
        + play()
        + play()
        + stop()
        + pause()
        + setTwoChannelAudio()
        + setSurroundAudio()
        + toString()
    }
  }
  

  package projecteInicial {
    class FacadeEstudiants {
        {static} + main()
    }
  }
  

  package projecteInicial {
    class PopcornPopper {
        ~ description : String
        + PopcornPopper()
        + on()
        + off()
        + pop()
        + toString()
    }
  }
  

  package projecteInicial {
    class Projector {
        ~ description : String
        + Projector()
        + on()
        + off()
        + wideScreenMode()
        + tvMode()
        + toString()
    }
  }
  

  package projecteInicial {
    class Screen {
        ~ description : String
        + Screen()
        + up()
        + down()
        + toString()
    }
  }
  

  package projecteInicial {
    class TheaterLights {
        ~ description : String
        + TheaterLights()
        + on()
        + off()
        + dim()
        + toString()
    }
  }
  

  package projecteInicial {
    class Tuner {
        ~ description : String
        ~ frequency : double
        + Tuner()
        + on()
        + off()
        + setFrequency()
        + setAm()
        + setFm()
        + toString()
    }
  }
  

  Amplifier o-- Tuner : tuner
  Amplifier o-- DvdPlayer : dvd
  Amplifier o-- CdPlayer : cd
  CdPlayer o-- Amplifier : amplifier
  DvdPlayer o-- Amplifier : amplifier
  Projector o-- DvdPlayer : dvdPlayer
  Tuner o-- Amplifier : amplifier


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
